fix views, not finish yet

--- a/views/beginner.ejs
+++ b/views/beginner.ejs
@@ -215,8 +215,9 @@
                               <i class="glyphicon glyphicon-flash mastery-icon icon-small mastery1"></i>90</a>
                            <br><span class="help" title=""
                               data-original-title="Win streak is a consecutive sequence of won games">Win streak</span>:
-                           <a class="black-link" href="/winstreak/2437498546"><i
-                                 class="fa fa-crosshairs ws-icon ws1"></i>19</a><br><br>
+                           <a class="black-link" href="/winstreak/2437498546">
+                              <i class="fa fa-crosshairs ws-icon ws1"></i>
+                              <text id="cur_ws"></text></a><br><br>
                            <table>
                               <tbody>
                                  <tr>
