--- a/views/expert.ejs
+++ b/views/expert.ejs
@@ -1,4 +1,4 @@
-<%- include('layout_main_up.ejs'); %>
+<%- include('layout_main_up.ejs',{'subtitle': 'Expert'}); %>
    <div class="page-block" id="L7" style="display: block;">
       <div id="G65" class="game-panel pull-right">
          <div class="row">
