--- a/views/help/patterns.ejs
+++ b/views/help/patterns.ejs
@@ -44,7 +44,7 @@
                               </td>
                            </tr>
                            <tr>
-                              <td id="patterns_img_b2" class="help-pattern-image"><img src="/2.png"
+                              <td id="patterns_img_b2" class="help-pattern-image"><img src="/help/b2/2.png"
                                     class="cursor-pointer" alt="b2 (2)" style="width: 120px; height: 120px;">
                                  <div id="patterns_dots_b2" class="help-patterns-dots"><span class="cursor-pointer"><i
                                           class="fa fa-circle help-patterns-dots-passed"></i></span>&nbsp;&nbsp;<span
