--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,8 +21,8 @@
       that are safe, and cells that contain mines. Cells suspected of being mines can be marked
       with a flag using the right mouse button.</p>
    <p>Read more:&nbsp; <a href="/help/gameplay" class="text-nowrap">
-         <i class="fa fa-book icon-book"></i>Gameplay</a>&nbsp;&nbsp; <a href="/help/patterns"
-         class="text-nowrap"><i class="fa fa-book icon-book"></i>Patterns</a>&nbsp;&nbsp;</p><br>
+         <i class="fa fa-book icon-book"></i>Gameplay</a>&nbsp;&nbsp; <a href="/help/patterns" class="text-nowrap"><i
+            class="fa fa-book icon-book"></i>Patterns</a>&nbsp;&nbsp;</p><br>
    <h2 class="homepage-h2">Various playing styles</h2>
    <hr class="homepage-hr">
    <p class="homepage-text">Despite the simple rules, there are many ways to play minesweeper.
@@ -295,4 +295,4 @@
          Policy</a><br><br>
    </div>
 
-   <%- include('layout_main_down.ejs',{mode:0}); %>
+   <%- include('layout_main_down.ejs',{mode:-1,cur_ws:0}); %>
