--- a/views/my_games/index.ejs
+++ b/views/my_games/index.ejs
@@ -83,4 +83,4 @@
       window.location.href = `/my-games/${mode}/1`;
     };
   </script>
-  <%- include('../layout_main_down.ejs',{mode:-1}); %>
+  <%- include('../layout_main_down.ejs',{mode:-1,cur_ws:0}); %>
